vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
Name = "ec2"
Owner = "jduchnowski" 
Project = "2023_internship_gda"
  }
}
